--- a/index.html
+++ b/index.html
@@ -10,7 +10,30 @@
 </head>
 <body>
 <header>
-	
+	<div class="wrapper">
+		<nav>
+			<ul>
+				<li>
+					<a href="#">Home</a>
+				</li>
+				<li>
+					<a href="#">About</a>
+				</li>
+				<li>
+					<a href="#">Architecture</a>
+				</li>
+				<li>
+					<a href="#">Photography</a>
+				</li>
+				<li>
+					<a href="#">Contact</a>
+				</li>
+			</ul>
+		</nav>
+		<div class="header-text">
+			<h1>Karla<br>Perez</h1>
+		</div>
+	</div>
 </header>
 
 <main>
