added SVG to sections

--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
 			<h2>Architect</h2>
 		</div>
 	</div>
+	<div class='firstSVG'>
+		<svg width="100%" height="100%" viewBox="0 0 100 100" preserveAspectRatio="none">
+		<path d="M0, 0 L 0,100 100,100 100,0 70,100 Z" />
+		</svg>
+	</div>
 </header>
 
 <main>
@@ -60,7 +65,12 @@
 
 		</div>
 	</section>
-	<section class="sectionDarkGrey">
+	<section class="sectionDarkGrey posr">
+		<div class='secondSVG'>
+			<svg width="100%" height="100%" viewBox="0 0 100 100" preserveAspectRatio="none">
+			<path d="M0,0 L 100,0 100,100 30,0 0,100 Z" />
+			</svg>
+		</div>
 		<div class="wrapper">
 			<div class="section-title">
 				<h2>Architecture Projects</h2>
@@ -68,7 +78,6 @@
 			</div>
 			<div>
 				<div class="main-carousel content-wrapper">
-					<i class="fa fa-chevron-circle-left" aria-hidden="true"></i>
 					<div class="carousel-cell cell">
 						<div class="carousel-image image1"></div>
 						<div class="carousel-description">
@@ -141,7 +150,7 @@
 						</div>
 					</div>
 
-					<div class="carousel-cell moreCell hidden">
+					<div class="carousel-cell moreCell">
 						<div class="carousel-image image1"></div>
 						<div class="carousel-description">
 							<h4>Title of Project</h4>
@@ -159,7 +168,7 @@
 						</div>
 					</div>
 
-					<div class="carousel-cell moreCell hidden">
+					<div class="carousel-cell moreCell">
 						<div class="carousel-image image1"></div>
 						<div class="carousel-description">
 							<h4>Title of Project</h4>
@@ -176,11 +185,14 @@
 							</div>
 						</div>
 					</div>
-
-				<i class="fa fa-chevron-circle-right" aria-hidden="true"></i>
 				</div>
 			</div>
-			<a class="btn btn-light read-more">View my CV</a>
+			<a class="btn btn-light read-more" id="thing">View (2) more</a>
+		</div>
+		<div class='thirdSVG'>
+			<svg width="100%" height="100%" viewBox="0 0 100 100" preserveAspectRatio="none">
+				<path d="M0,0 L 0,100 100,100 100,0 70,100 Z" />
+			</svg>
 		</div>
 	</section>
 
@@ -220,7 +232,7 @@
 					</div>
 
 					<div class="carousel-cell cell row1">
-						<div class="carousel-image photo2"></div>
+						<div class="carousel-image photo3"></div>
 						<div class="carousel-photo-description">
 							<h4>Title of Project</h4>
 							<div class="previewText">
@@ -233,7 +245,7 @@
 					</div>
 
 					<div class="carousel-cell cell row2 hidden">
-						<div class="carousel-image photo2"></div>
+						<div class="carousel-image photo4"></div>
 						<div class="carousel-photo-description">
 							<h4>Title of Project</h4>
 							<div class="previewText">
@@ -245,7 +257,7 @@
 						</div>
 					</div>
 					<div class="carousel-cell cell row2 hidden">
-						<div class="carousel-image photo2"></div>
+						<div class="carousel-image photo5"></div>
 						<div class="carousel-photo-description">
 							<h4>Title of Project</h4>
 							<div class="previewText">
@@ -257,7 +269,7 @@
 						</div>
 					</div>
 					<div class="carousel-cell cell row2 hidden">
-						<div class="carousel-image photo2"></div>
+						<div class="carousel-image photo6"></div>
 						<div class="carousel-photo-description">
 							<h4>Title of Project</h4>
 							<div class="previewText">
@@ -276,19 +288,32 @@
 		</div>
 	</section>
 
-	<section class="wrapper fl-col">
-		<div class="section-title">
-			<h2>View My Resume</h2>
-			<div class="keyline"></div>
+	<section class="posr">
+		<div class='fourthSVG'>
+			<svg width="100%" height="100%" viewBox="0 0 100 100" preserveAspectRatio="none">
+			<path d="M0,0 L 100,0 100,100 30,0 0,100 Z" />
+			</svg>
 		</div>
-		<div class="content-wrapper fl-col">
-			<p>Click here to view my CV</p>
-			<a href="" class="btn btn-light">View my CV</a>
+		<div class="wrapper fl-col">
+			<div class="section-title">
+				<h2>View My Resume</h2>
+				<div class="keyline"></div>
+			</div>
+			<div class="content-wrapper fl-col">
+				<p>Click here to view my CV</p>
+				<a href="" class="btn btn-light">View my CV</a>
+			</div>
 		</div>
+		<!-- <div class='fifthSVG'>
+			<svg width="100%" height="100%" viewBox="0 0 100 100" preserveAspectRatio="none">
+				<path d="M0,0 L 0,100 100,100 100,0 70,100 Z" />
+			</svg>
+		</div> -->
 	</section>
 </main>
 
 <footer class="sectionGrey">
+	
 	<div class="wrapper">
 		<div>
 			<h2>Contact</h2>
